--- a/wp-content/themes/rysersonmag-child/src/sass/child-theme.scss
+++ b/wp-content/themes/rysersonmag-child/src/sass/child-theme.scss
@@ -26,9 +26,11 @@
 @import "theme/post-styles/video-wrapper";
 @import "theme/post-styles/dyk";
 @import "theme/post-styles/where-are-they-now";
+@import "theme/post-styles/by-the-numbers";
 @import "theme/post-styles/image-block";
 @import "theme/post-styles/author";
 @import "theme/post-styles/related-articles";
+@import "theme/post-styles/comments";
 @import "theme/archive";
 @import "theme/archive-mag";
 @import "theme/home";
