--- a/wp-content/themes/rysersonmag-child/src/sass/theme/_drawer-mobile.scss
+++ b/wp-content/themes/rysersonmag-child/src/sass/theme/_drawer-mobile.scss
@@ -1,3 +1,15 @@
+.mobile-header-pad {
+    padding: 12px 15px;
+}
+
+#mobileDrawerClose {
+    position: absolute;
+    right: 0;
+    top: 4px;
+}
+
+
+
 .mobile-header-drawer {
     display: none;
     position: fixed;
@@ -9,14 +21,161 @@
     background: #e2e2e2;
     width: 100vw;
     height: 100vh;
+    
+    .search-form {
+        margin-top: 15px;
+    }
+    
+    input.search-submit{
+        background-image: url('../img/search-submit-mobile.png');
+        background-repeat: no-repeat;
+        background-size: 50%;
+        background-color: rgba(255,255,255,0);
+        width: 50px;
+        height: 44px;
+        position: relative;
+        top: 16px;
+        background-position: top right;
+        border: none;
+        border-bottom: 2px solid $black;
+    }
+
+    input[type=search] {
+        background: none !important;
+        border: none;
+        border-bottom: 2px solid $black;
+        border-radius: 0;
+        padding: 29px 0;
+        @include search-font-mobile;
+
+        &::-webkit-input-placeholder { /* Edge */
+            @include search-font-mobile;
+        }
+
+        &:-ms-input-placeholder { /* Internet Explorer 10-11 */
+            @include search-font-mobile;
+        }
+
+        &::placeholder {
+            @include search-font-mobile;
+        }
+
+        &:focus {
+        border: none;
+        box-shadow: none;
+        border-bottom: 2px solid $black;
+            &::-webkit-input-placeholder { /* Edge */
+                color: transparent;
+            }
+
+            &:-ms-input-placeholder { /* Internet Explorer 10-11 */
+                color: transparent;
+            }
+
+            &::placeholder {
+                color: transparent;
+            }
+        }
+    }
+    
+
+    input[type="search"]:-webkit-autofill,
+    input[type="search"]:-webkit-autofill:hover, 
+    input[type="search"]:-webkit-autofill:focus {
+        border: 1px solid $white;
+        -webkit-text-fill-color: $black;
+        border-bottom: 2px solid $black;
+        -webkit-box-shadow: 0 0 0px 80px $white inset;
+        transition: none;
+        @include search-font-mobile;
+    }
+
+    input[type="search"]:-webkit-autofill::first-line {
+      @include search-font-mobile;
+    }   
+    
+    
+    ul.drawer-footer-social {
+        display: flex;
+        padding: 0;
+        justify-content: flex-start;
+        list-style-type: none;
+        margin: 0;
+        li {
+            margin-left: 20px;
+            margin-right: 0;
+            margin-bottom: 0;
+            a {
+                img {
+                    width: 36px;
+                }
+            }
+        }
+    }
 }
 
-.mobile-header-pad {
-    padding: 12px 15px;
+
+.mobile-drawer-cat-list {
+    padding: 0;
+    list-style-type: none;
+    margin-top: 30px;
+    border-bottom: 2px dotted $black;
+    li {
+        a {
+            @include mobile-drawer-term-font;
+            display: inline-block;
+            background-image: none;
+            background-repeat: no-repeat;
+            background-position: 0 20px;
+            background-size: 100% 10px;
+            padding-bottom: 40px;
+            background-image: linear-gradient(180deg, #c4c4c4, #c4c4c4);
+            &.green {
+                background-image: linear-gradient(180deg, $green, $green);
+            }
+            &.blue {
+                background-image: linear-gradient(180deg, $blue, $blue);
+            }
+            &.orange {
+                background-image: linear-gradient(180deg, $orange, $orange);
+            }
+            &.yellow {
+                background-image: linear-gradient(180deg, $yellow, $yellow);
+            }
+            &:hover {
+                text-decoration: none;
+            }
+        }
+    }
 }
 
-#mobileDrawerClose {
-    position: absolute;
-    right: 0;
-    top: 4px;
+
+.mobile-drawer-link-wrapper {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 20px;
+    padding: 0 15px;
+}
+.half {
+    width: 50%;
+    float: left;
+}
+ul.mobile-drawer-links {
+    padding: 0;
+    list-style-type: none;
+    li {
+        margin-bottom: 6px;
+        a {
+            font-size: 16px;
+            color: $black;
+            font-family: 'Suisse Reg', sans-serif;
+            text-decoration: underline;
+        }
+    }
+}
+.mob-drawer-copy {
+    font-size: 16px;
+    color: $black;
+    font-family: 'Suisse Reg', sans-serif;
+    padding-left: 15px;
 }
