--- a/wp-content/themes/rysersonmag-child/src/sass/theme/post-styles/_author.scss
+++ b/wp-content/themes/rysersonmag-child/src/sass/theme/post-styles/_author.scss
@@ -3,7 +3,8 @@
     float: left;
 }
 .author-info {
-    width: 440px;
+    width: 420px;
+    float: right;
     .author-desc {
         @include author-font;
         color: $black;
