--- a/wp-content/themes/rysersonmag-child/src/sass/theme/_archive.scss
+++ b/wp-content/themes/rysersonmag-child/src/sass/theme/_archive.scss
@@ -1,14 +1,17 @@
 .archive-page, .home {
     .single-archive-post-wrap {
         margin-top: 70px;
+        text-align: left;
     }
     .primary-category {
         @include post-cat;
         display: inline;
+        text-align: left;
     }
     a {
         text-decoration: none;
-    }
+        text-align: left;
+    } 
     h1.page-title {
         @include archive-term-font;
         display: inline-block;
@@ -39,9 +42,11 @@
     h2.entry-title {
         @include archive-title-font;
         margin-bottom: 3px;
+        text-align: left;
     }
     h3.subheading {
         @include archive-subhading-font;
+        text-align: left;
     }
 }
 
@@ -74,7 +79,6 @@
 
 
 #ajax-load-more {
-    margin-top: 75px;
     display: flex;
     justify-content: center;
     flex-direction: column;
@@ -83,6 +87,7 @@
 
 .alm-load-more-btn {
     @include alm-btn-font;
+    margin-top: 75px;
     text-align: center;
     background: $white;
     border: 1.25px solid $black;
