--- a/wp-content/themes/rysersonmag-child/src/sass/child-theme.scss
+++ b/wp-content/themes/rysersonmag-child/src/sass/child-theme.scss
@@ -36,4 +36,5 @@
 @import "theme/home";
 @import "theme/current-issue-page";
 @import "theme/search-results-page";
+@import "theme/page-template";
 @import "theme/footer";
