--- a/wp-content/themes/rysersonmag-child/src/sass/child-theme.scss
+++ b/wp-content/themes/rysersonmag-child/src/sass/child-theme.scss
@@ -37,4 +37,5 @@
 @import "theme/current-issue-page";
 @import "theme/search-results-page";
 @import "theme/page-template";
+@import "theme/page-contact";
 @import "theme/footer";
