--- a/wp-content/themes/rysersonmag-child/src/sass/theme/_footer.scss
+++ b/wp-content/themes/rysersonmag-child/src/sass/theme/_footer.scss
@@ -83,3 +83,87 @@
         }
     }
 }
+
+
+.main-footer-mob {
+    display: none;
+}
+
+@include media-breakpoint-down(sm) {
+    .main-footer {
+        display: none;
+    }
+    .main-footer-mob {
+        display: block;
+    }
+    
+    .main-footer-mob {
+        background: $black;
+        padding: 40px 40px 0 40px;
+        @include footer-font;
+        img.white-ryerson-logo {
+            margin-bottom: $space * 1.5;
+            width: 155px;
+        }
+        a {
+            @include footer-font;
+            text-decoration: underline;
+        }
+        h2.footer-heading {
+            @include footer-font;
+            text-transform: uppercase;
+            margin-bottom: 13px;
+        }
+        ul {
+            padding: 0;
+            list-style-type: none;
+            li {
+                margin-bottom: 16px;
+                a {
+                    font-size: 20px;
+                }
+            }
+        }
+        .give-btn {
+            background: $white;
+            color: $black;
+            text-decoration: none;
+            padding: 7px 15px;
+            text-align: center;
+            border-radius: 4px;
+            display: inline-block;
+        }
+        @include media-breakpoint-down(md) {
+            padding: 40px 0;
+        }
+        
+        .flex-row-between {
+            display: flex;
+            justify-content: space-between;
+        }
+        
+        .renaming-p {
+            font-size: 16px;
+            margin-bottom: 46px;
+        }
+        
+        ul.drawer-footer-social {
+            justify-content: start !important;
+            margin: 25px 0;
+            li:first-child {
+                margin-left: 0;
+            }
+            li a img {
+                width: 36px;
+            }
+        }
+        
+        .drawer-footer-links {
+            width: 100%;
+            float: left;
+        }
+        .address {
+            margin-top: 12px;
+        }
+    }
+}
