--- a/wp-content/themes/rysersonmag-child/src/sass/theme/_mixins.scss
+++ b/wp-content/themes/rysersonmag-child/src/sass/theme/_mixins.scss
@@ -180,6 +180,10 @@
     line-height: 20px;
     font-family: 'Suisse Reg', sans-serif;
     color: $white;
+    @include media-breakpoint-down(sm) {
+        font-size: 16px !important;
+        line-height: 20px;
+    } 
 }
 
 @mixin archive-term-font {
