--- a/wp-content/themes/rysersonmag-child/src/sass/theme/_page-contact.scss
+++ b/wp-content/themes/rysersonmag-child/src/sass/theme/_page-contact.scss
@@ -1,3 +1,9 @@
+.page-contact {
+    a {
+        text-decoration: underline !important;
+    }
+}
+
 .masthead-contact-sec {
     padding-top: 55px;
     margin-top: 55px;
